# streamsaver

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  setup.py  twitch_downloader.py
src/stream_saver/: __main__.py  app.py  config.py  recorder.py
stream_saver/: __main__.py  main.py
