[tool.poetry]
name = "stream_saver"
version = "0.1.0"
description = "A tool to automatically download streams live and avoid muted VODs"
authors = ["Zachary Joswick <joswick@torc.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.1"
fastapi = "^0.61.0"
pytz = "^2020.1"


[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^6.0.1"
briefcase = "^0.1.1"
coverage = "^5.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
